--- a/Clients/ClientVanille/src/inspiration-visuelle.fxml
+++ b/Clients/ClientVanille/src/inspiration-visuelle.fxml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.BorderPane?>
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
 
-<BorderPane prefHeight="343.0" prefWidth="364.0" style="-fx-background-color: yellow;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ControleurInspirationVisuelle">
-   <bottom>
-      <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#trouverInspiration" prefHeight="26.0" prefWidth="422.0" style="-fx-background-color: yellow;" text="Trouver une inspiration" BorderPane.alignment="CENTER" />
-   </bottom>
-   <center>
-      <TextArea id="listePensees" prefHeight="409.0" prefWidth="200.0" style="-fx-border-color: white; -fx-border-width: 2px; -fx-control-inner-background: yellow;" wrapText="true" />
-   </center>
-   <top>
-      <Label style="-fx-background-color: yellow;" text="Pensée du jour" BorderPane.alignment="CENTER" />
-   </top>
-</BorderPane>
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="577.0" prefWidth="728.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="ControleurInspirationVisuelle">
+  <children>
+    <BorderPane layoutX="164.0" layoutY="39.0" prefHeight="500.0" prefWidth="364.0">
+      <top>
+        <TextArea prefHeight="67.0" prefWidth="364.0" style="-fx-font-size: 40pt;&#10;-fx-font-weight:bold;&#10;-fx-text-fill:brown;" 
+        text="Pensée du jour" wrapText="true" />
+      </top>
+      <center>
+        <TextArea id="listePensees" prefHeight="400.0" prefWidth="200.0" style=" -fx-border-color: brown ;  &#10; -fx-border-width: 2px ;  &#10;-fx-control-inner-background: orange;" wrapText="true" />
+      </center>
+      <bottom>
+        <Button mnemonicParsing="false" onAction="#trouverInspiration" prefWidth="364.0" text="Trouver une inspiration" />
+      </bottom>
+    </BorderPane>
+  </children>
+</AnchorPane>
